src/k8s/apps/kaneo/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kaneo
spec:
  selector:
    app.kubernetes.io/name: kaneo
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
